<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".updateOrder">


    <EditText
        android:id="@+id/idEdtproductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_product_name2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />


    <EditText
        android:id="@+id/idEdtAmountOrdered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_amount_ordered2"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/idEdtProdCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_product_category2"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/idEdtProdSup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_product_supplier2"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/idEdtProdCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_product_cost2"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/idBtnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/update_order"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/idBtnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/delete_order"
        android:textAllCaps="false" />

</LinearLayout>